flapivor/tests/m3/hopix/typechecker/bad/78-if-then-else-03.hopix
val main : Int =
    if true then "String" else 1